--- a/modules.html
+++ b/modules.html
@@ -12,7 +12,21 @@
       <a href="index.html" class="container-return">Назад</a>
       <h1 class="modules-header">Модули курса Веб-верстка</h1>
       <div class="chapters">
-
+        <div class="chapter chapter-1">
+          <p class="chapter-description">
+            <h3 class="container-section">Введение</h3>
+            <span class="container-list">Как работают сайты. Верстка</span>
+            <br>
+            <span class="container-list">Возможности HTML, CSS, JS</span>
+            <br>
+            <span class="container-list">Редактор кода. Codepen</span>
+            <br>
+            <span class="container-list">Работа с DevTools</span>
+          </p>
+        </div>
+        <div class="chapter"></div>
+        <div class="chapter"></div>
+        <div class="chapter"></div>
       </div>
   </div>
 </body>
