--- a/modules.html
+++ b/modules.html
@@ -6,27 +6,62 @@
   <title>Модули</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <div class="container">
+<body class="body-modules">
+  <div class="container container-modules">
       <h2 class="modules-title">Skillbox</h2>
       <a href="index.html" class="container-return">Назад</a>
       <h1 class="modules-header">Модули курса Веб-верстка</h1>
       <div class="chapters">
         <div class="chapter chapter-1">
-          <p class="chapter-description">
-            <h3 class="container-section">Введение</h3>
-            <span class="container-list">Как работают сайты. Верстка</span>
-            <br>
-            <span class="container-list">Возможности HTML, CSS, JS</span>
-            <br>
-            <span class="container-list">Редактор кода. Codepen</span>
-            <br>
-            <span class="container-list">Работа с DevTools</span>
-          </p>
+          <div class="chapter-description">
+            <h3 class="chapter-section__header">Введение</h3>
+            <ul class="chapter-description__list">
+              <li class="chapter-description__list-element">Как работают сайты. Верстка</li>
+              <li class="chapter-description__list-element">Возможности HTML, CSS, JS</li>
+              <li class="chapter-description__list-element">Редактор кода. Codepen</li>
+              <li class="chapter-description__list-element">Работа с DevTools</li>
+            </ul>
+            <span class="chapter-number">01</span>
+          </div>
         </div>
-        <div class="chapter"></div>
-        <div class="chapter"></div>
-        <div class="chapter"></div>
+        <div class="chapter chapter-2">
+          <div class="chapter-description">
+            <h3 class="chapter-section__header">Базовый HTML</h3>
+            <ul class="chapter-description__list">
+              <li class="chapter-description__list-element">Базовые теги</li>
+              <li class="chapter-description__list-element">Теги картинок и ссылок</li>
+              <li class="chapter-description__list-element">Теги таблиц</li>
+              <li class="chapter-description__list-element">Служебные теги</li>
+              <li class="chapter-description__list-element">Кодстайл HTML</li>
+            </ul>
+            <span class="chapter-number">02</span>
+          </div>
+        </div>
+        <div class="chapter chapter-3">
+          <div class="chapter-description">
+            <h3 class="chapter-section__header">Базовый CSS</h3>
+            <ul class="chapter-description__list">
+              <li class="chapter-description__list-element">Подключение CSS</li>
+              <li class="chapter-description__list-element">Вес селектора</li>
+              <li class="chapter-description__list-element">Свойство display</li>
+              <li class="chapter-description__list-element">Блочная модель и позиционирование</li>
+              <li class="chapter-description__list-element">Кодстайл CSS</li>
+            </ul>
+            <span class="chapter-number">03</span>
+          </div>
+        </div>
+        <div class="chapter chapter-4">
+          <div class="chapter-description">
+            <h3 class="chapter-section__header">Работа с макетом</h3>
+            <ul class="chapter-description__list">
+              <li class="chapter-description__list-element">Про форматы изображений</li>
+              <li class="chapter-description__list-element">Работа с макетом в Photoshop</li>
+              <li class="chapter-description__list-element">Работа с макетом в Figma</li>
+            </ul>
+            <span class="chapter-number">04</span>
+          </div>
+        </div>
+        <button class="modules-button__more">Показать еще</button>
       </div>
   </div>
 </body>
